--- a/luci-app-poweroff/po/ja/poweroff.po
+++ b/luci-app-poweroff/po/ja/poweroff.po
@@ -8,24 +8,24 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.2.4\n"
-"Last-Translator: eSirPlayground <https://www.youtube.com/c/esirplayground>\n"
+"Last-Translator: kyota1200 <https://github.com/kyota1200>\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language: zh_CN\n"
+"Language: ja\n"
 
 msgid "PowerOff"
-msgstr "关机"
+msgstr "電源オフ"
 
 msgid "Shut down your router"
-msgstr "吹灯拔蜡，关机回家"
+msgstr "シャットダウンします"
 
 msgid "Perform PowerOff"
-msgstr "关机，走你~"
+msgstr "電源オフの実行"
 
 msgid "Warning: There are unsaved changes that will get lost on shutting down!"
-msgstr "警告：没保存的改动在关机的时候都会丢失！别惊讶，要么保存，要么放弃"
+msgstr "警告: 保存されていない変更はシャットダウン時に失われます。"
 
 msgid "Waiting for device..."
-msgstr "设备有点懵，要等一下..."
+msgstr "待機中..."
 
 msgid "Router is shutting down..."
-msgstr "正在关机，说啥也不好使了..."
+msgstr "シャットダウンしています..."
